Bug 274859 - user is "overnotified" when signal strength is nearly low.
Summary: user is "overnotified" when signal strength is nearly low.
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords:
: 277639 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-06-03 19:26 UTC by Davide Bettio
Modified: 2011-07-12 22:50 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Davide Bettio 2011-06-03 19:26:26 UTC
Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

When the wireless signal strength is nearly low and it goes up and down frequently between low and not low the user is frequently notified about low signal ("Low signal on Access Point"). This might happen several times every minute.


Reproducible: Always



Expected Results:  
User shouldn't notified with that message too frequently.
Comment 1 Sebastian Kügler 2011-06-03 20:08:49 UTC
The user should not be notified of this at all. Why should he care? It's also visible easily on the panel, in case he cares.

I even doubt that he should be notified of the network being down, because as soon as he needs to know, it's pretty obvious anyway.

The notification in question should be off by default.
Comment 2 Lamarque V. Souza 2011-06-04 02:33:47 UTC
Git commit dd7a452ae793c769a7f939a307c775b3868f5c5f by Lamarque V. Souza.
Committed on 04/06/2011 at 02:32.
Pushed by lvsouza into branch 'master'.

Disable "Low signal strength" notification by default.

CCBUG: 274859
(cherry picked from commit 42e9cc3b2b14f774e07e17817b726b332201190a)

M  +1    -1    networkmanagement.notifyrc     

http://commits.kde.org/networkmanagement/dd7a452ae793c769a7f939a307c775b3868f5c5f
Comment 3 Lamarque V. Souza 2011-06-04 02:33:48 UTC
Git commit 42e9cc3b2b14f774e07e17817b726b332201190a by Lamarque V. Souza.
Committed on 04/06/2011 at 02:32.
Pushed by lvsouza into branch 'nm09'.

Disable "Low signal strength" notification by default.

CCBUG: 274859

M  +1    -1    networkmanagement.notifyrc     

http://commits.kde.org/networkmanagement/42e9cc3b2b14f774e07e17817b726b332201190a
Comment 4 Lamarque V. Souza 2011-06-04 05:47:06 UTC
(In reply to comment #1)
> The user should not be notified of this at all. Why should he care? It's also
> visible easily on the panel, in case he cares.

Only wireless connections change the system tray icon, for mobile broadband connections notifications is the only way to know the signal quality is low.
 
> I even doubt that he should be notified of the network being down, because as
> soon as he needs to know, it's pretty obvious anyway.

People who use VPN requested this notification since the tray icon does not indicate when a VPN connection is active.
 
> The notification in question should be off by default.

Done.
Comment 5 Lamarque V. Souza 2011-06-04 05:50:48 UTC
Git commit 9d50f5a41e7151a19054ff5e83e1164cf2e02978 by Lamarque V. Souza.
Committed on 04/06/2011 at 05:39.
Pushed by lvsouza into branch 'master'.

Add 30 seconds interval between signal strength notifications.

BUG: 274859

M  +14   -6    libs/service/notificationmanager.cpp     
M  +5    -0    libs/service/notificationmanager.h     

http://commits.kde.org/networkmanagement/9d50f5a41e7151a19054ff5e83e1164cf2e02978
Comment 6 Lamarque V. Souza 2011-06-04 05:50:49 UTC
Git commit 623ffd37c1f2ea9bfacb59fc771aef1e9a49e482 by Lamarque V. Souza.
Committed on 04/06/2011 at 05:39.
Pushed by lvsouza into branch 'nm09'.

Add 30 seconds interval between signal strength notifications.

BUG: 274859

M  +14   -6    libs/service/notificationmanager.cpp     
M  +5    -0    libs/service/notificationmanager.h     

http://commits.kde.org/networkmanagement/623ffd37c1f2ea9bfacb59fc771aef1e9a49e482
Comment 7 Davide Bettio 2011-06-04 18:00:49 UTC
30 seconds time interval is still too low, 5 minutes are still better and the notification shouldn't be displayed if the signal remains nearly low.

>I even doubt that he should be notified of the network being down, because as
>soon as he needs to know, it's pretty obvious anyway.
I don't agree: if you are working on some offline applications you might not notice that your computer has gone offline and you will not receive any notification from some webapps.
Comment 8 Lamarque V. Souza 2011-06-04 19:59:09 UTC
(In reply to comment #7)
> 30 seconds time interval is still too low, 5 minutes are still better and the
> notification shouldn't be displayed if the signal remains nearly low.

Ok, I will increase the interval to 5 minutes but that is it. I will not do the second request because it does not make much sense. One notification at each 5 minutes does not disturb anybody and if the user enabled the notification he/she wants to know when the signal is low. In you case it is better you disable the notification if you are not interested in it.
Comment 9 Lamarque V. Souza 2011-06-04 19:59:43 UTC
Git commit 9225da66d7f3744ae703b23fc4abacec1835cec7 by Lamarque V. Souza.
Committed on 04/06/2011 at 19:51.
Pushed by lvsouza into branch 'master'.

Increase signal strength notification interval to 5 minutes.

CCBUG: 274859
(cherry picked from commit c12c15cdee841718fc7969441bdddd0021f786a8)

M  +2    -1    libs/service/notificationmanager.cpp     

http://commits.kde.org/networkmanagement/9225da66d7f3744ae703b23fc4abacec1835cec7
Comment 10 Lamarque V. Souza 2011-06-04 19:59:44 UTC
Git commit c12c15cdee841718fc7969441bdddd0021f786a8 by Lamarque V. Souza.
Committed on 04/06/2011 at 19:51.
Pushed by lvsouza into branch 'nm09'.

Increase signal strength notification interval to 5 minutes.

CCBUG: 274859

M  +2    -1    libs/service/notificationmanager.cpp     

http://commits.kde.org/networkmanagement/c12c15cdee841718fc7969441bdddd0021f786a8
Comment 11 Lamarque V. Souza 2011-07-12 22:50:00 UTC
*** Bug 277639 has been marked as a duplicate of this bug. ***