Add 30 seconds interval between signal strength notifications.

BUG: 274859